--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp": "^4.0.2",
     "gulp-connect": "^5.7.0",
     "gulp-sass": "^4.0.2",
+    "http-proxy-middleware": "^1.0.3",
     "node-sass": "^4.13.1"
   }
 }
