--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-babel": "^8.0.0",
     "gulp-connect": "^5.7.0",
     "gulp-cssnano": "^2.1.3",
+    "gulp-file-include": "^2.1.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-minify-html": "^1.0.6",
     "gulp-rev": "^9.0.0",
