--- a/rev/scss/rev-manifest.json
+++ b/rev/scss/rev-manifest.json
@@ -1,7 +1,12 @@
 {
-  "base.css": "base-9ed158df9d.css",
-  "commons.css": "commons-1af9e4f9f3.css",
-  "index.css": "index-5ca4898a39.css",
+  "activity.css": "activity-f1c9cee5fc.css",
+  "base.css": "base-7261193b0d.css",
+  "cars.css": "cars-0b34e8ef6f.css",
+  "commons.css": "commons-11badbaddc.css",
+  "detailInfo.css": "detailInfo-9b895240f6.css",
+  "index.css": "index-5fcdd34afa.css",
   "login.css": "login-5de88a9ef3.css",
-  "register.css": "register-638a55b1c8.css"
+  "register.css": "register-638a55b1c8.css",
+  "shop_list.css": "shop_list-0901d83a9d.css",
+  "ui-commons.css": "ui-commons-026755fe32.css"
 }
