--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,11 +13,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 14
-      - run: npm i pnpm -g
-      - run: pnpm install --no-frozen-lockfile
+      - run: npm install --no-frozen-lockfile
 
       - name: Build
-        run: pnpm build
+        run: npm build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
